[project]
name = "email-triage-env"
version = "1.0.0"
description = "A real-world OpenEnv environment for email triage and response tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "huggingface_hub",
    "requests",
    "openenv-core"
]

[project.urls]
Homepage = "https://huggingface.co/spaces/kabbie29/email-triage-env"

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "email-triage-env"
version = "1.0.0"
entry_point = "server:app"
port = 7860
tasks = ["task_1_easy", "task_2_medium", "task_3_hard"]